buildscript {
    dependencies {
        classpath 'org.ow2.asm:asm:9.3'
    }
}

plugins {
    id 'java'
    id 'application'
    id "com.github.johnrengelman.shadow" version "7.1.2"
    id 'info.solidsoft.pitest' version '1.6.0'
    id 'se.patrikerdes.use-latest-versions' version '0.2.18'
    id 'com.github.ben-manes.versions' version '0.41.0'

}

repositories {
    mavenCentral()
    jcenter()
    maven {
        url 'https://m2.dv8tion.net/releases'
        name 'm2-dv8tion'
    }
    maven { url 'https://jitpack.io' }


}

test {
    useJUnitPlatform()
    testLogging.showStandardStreams = true

}

apply plugin: 'java'
apply plugin: 'idea'

mainClassName = "core.Chuu"

group 'org.ish'
version '1.1.0'
apply plugin: 'java'

sourceCompatibility = 19
targetCompatibility = 19


compileJava {
    options.compilerArgs += ["-Xlint:deprecation", "--enable-preview", "--add-modules", "jdk.incubator.concurrent"]

}
compileTestJava {
    options.compilerArgs += ["-Xlint:deprecation", "--enable-preview", "--add-modules", "jdk.incubator.concurrent"]

}
test {
    jvmArgs '--enable-preview'

}
compileJava.options.encoding = 'UTF-8'
compileTestJava.options.encoding = 'UTF-8'

shadowJar {
}

dependencies {
    implementation project(':model')
    implementation group: 'org.knowm.xchart', name: 'xchart', version: '3.8.1'


    implementation 'se.michaelthelin.spotify:spotify-web-api-java:7.1.0'

    implementation 'ch.qos.logback:logback-classic:1.3.0-alpha16'


    implementation 'com.github.walkyst.lavaplayer-fork:lavaplayer:1.3.98.1'
// https://mvnrepository.com/artifact/net.sf.trove4j/trove4j
    implementation 'net.sf.trove4j:trove4j:3.0.3'

    // Audio
    implementation 'com.github.natanbc:lavadsp:0.7.7'
    implementation('com.sedmelluq:lavaplayer-ext-youtube-rotator:0.2.3') {
        exclude module: 'lavaplayer'
    }

    implementation 'com.sedmelluq:jda-nas:1.1.0'

    implementation 'com.github.ben-manes.caffeine:caffeine:3.1.1'

    implementation 'com.neovisionaries:nv-i18n:1.29'
    implementation 'com.github.ishwi:java-eval:8de726df14c18523912aa6ff21bfd1b0b7d54924'
    implementation group: 'com.google.guava', name: 'guava', version: '31.1-jre'
    implementation("net.dv8tion:JDA:5.0.0-alpha.13")

    implementation group: 'org.jsoup', name: 'jsoup', version: '1.14.3'

    implementation group: 'org.apache.commons', name: 'commons-collections4', version: '4.4'
    implementation group: 'org.json', name: 'json', version: '20220320'
    implementation group: 'io.github.classgraph', name: 'classgraph', version: '4.8.147'
    implementation group: 'com.twelvemonkeys.imageio', name: 'imageio-core', version: '3.8.2'
    implementation group: 'com.twelvemonkeys.imageio', name: 'imageio-jpeg', version: '3.8.2'
    implementation group: 'com.twelvemonkeys.imageio', name: 'imageio-webp', version: '3.8.2'
    implementation group: 'org.imgscalr', name: 'imgscalr-lib', version: '4.2'
    implementation group: 'org.apache.xmlgraphics', name: 'batik-transcoder', version: '1.14'
    implementation group: 'org.apache.xmlgraphics', name: 'batik-codec', version: '1.14'
    implementation group: 'org.apache.xmlgraphics', name: 'batik-svggen', version: '1.14'
    implementation group: 'com.zaxxer', name: 'HikariCP', version: '5.0.1'
    implementation("com.github.minndevelopment:emoji-java:master-SNAPSHOT")
// https://mvnrepository.com/artifact/com.opencsv/opencsv
    implementation 'org.apache.commons:commons-csv:1.9.0'


    // TEST
// https://mvnrepository.com/artifact/org.awaitility/awaitility
    testImplementation group: 'org.awaitility', name: 'awaitility', version: '4.2.0'
    testImplementation group: 'com.openpojo', name: 'openpojo', version: '0.9.1'

// https://mvnrepository.com/artifact/org.ow2.asm/asm
    testImplementation group: 'org.ow2.asm', name: 'asm', version: '9.3'

// https://mvnrepository.com/artifact/org.graphwalker/graphwalker-core
    testImplementation group: 'org.graphwalker', name: 'graphwalker-core', version: '4.3.1'
// https://mvnrepository.com/artifact/org.graphwalker/graphwalker-java
    // group: 'org.graphwalker', name: 'graphwalker-java', version: '4.1.0'

// https://mvnrepository.com/artifact/com.pholser/junit-quickcheck-core
    //a
//    testImplementation group: 'com.pholser', name: 'junit-quickcheck-core', version: '1.0'
    testImplementation 'org.mockito:mockito-core:4.6.1'
// https://mvnrepository.com/artifact/org.assertj/assertj-core
    testImplementation 'org.assertj:assertj-core:3.23.1'
    // https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-engine
    testImplementation 'org.junit.jupiter:junit-jupiter:5.8.2'

    testImplementation "org.testcontainers:testcontainers:1.17.3"
    testImplementation "org.testcontainers:junit-jupiter:1.17.3"
    testImplementation "org.testcontainers:mariadb:1.17.3"
    testImplementation 'org.mariadb.jdbc:mariadb-java-client:3.0.6'
    testImplementation 'org.liquibase:liquibase-core:4.11.0'
    testImplementation group: 'org.yaml', name: 'snakeyaml', version: '1.30'


    testImplementation group: 'org.openjdk.jmh', name: 'jmh-core', version: '1.35'
    testAnnotationProcessor group: 'org.openjdk.jmh', name: 'jmh-generator-annprocess', version: '1.35'


}


tasks.withType(JavaCompile).configureEach {
    options.fork = true
}
